Fix scaling for mobile devices, fix background not being covered properly on landscape, center game area on screen

--- a/src/App.css
+++ b/src/App.css
@@ -46,7 +46,7 @@ body {
 }
 
 .bg-animated-gradient {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
@@ -99,7 +99,7 @@ body {
 }
 
 .bg-cover {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
